<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_page_size_default"
        android:entries="@array/settings_page_size_labels"
        android:entryValues="@array/settings_page_size_values"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />

    <CheckBoxPreference
        android:key="@string/settings_show_thumbnails_key"
        android:title="@string/settings_show_thumbnails_label"
        android:summary="Show thumbnails?"
        android:defaultValue="@string/settings_show_thumbnails_default"
        />

    <EditTextPreference
        android:defaultValue="@string/settings_page_default"
        android:inputType="number"
        android:key="@string/settings_page_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>